--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,17 @@
 h1 {
-  font-family: "Montserrat, sans-serif";
+  color: white;
+  font-weight: bold;
   font-size: 3rem;
   line-height: 1.5;
-  font-weight: 900;
+}
+
+.navbar-brand {
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.nav-link {
+  font-size: 1.25rem;
 }
 
 #title {
