--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,50 @@
+body {
+  font-family: 'Montserrat';
+}
+
 h1 {
-  color: white;
   font-weight: bold;
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
-.navbar-brand {
-  font-weight: bold;
-  font-size: 2rem;
-}
-
-.nav-link {
-  font-size: 1.25rem;
+  font-size: 3.5rem !important;
+  line-height: 1.5 !important;
 }
 
 #title {
   background-color: #ff4c68;
+  color: white;
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% !important;
+}
+
+/* Navigation Bar */
+.navbar {
+  padding-bottom: 0 0 4.5rem !important;
+}
+
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-weight: bold;
+  font-size: 2.5rem !important;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  /* font-family: 'Montserrat-Light'; */
+}
+
+/* Download Button */
+.download-btn {
+  margin: 5% 3% 5% 0;
+}
+
+/* Title Image */
+.title-img {
+  padding-top: 5%;
+  width: 60%;
+  transform: rotate(25deg);
 }
