--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,19 @@
 body {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat' !important;
 }
 
 h1 {
   font-weight: bold;
   font-size: 3.5rem !important;
   line-height: 1.5 !important;
+}
+
+h3 {
+  font-weight: bold;
+}
+
+p {
+  color: #8f8f8f;
 }
 
 #title {
@@ -47,4 +55,23 @@ h1 {
   padding-top: 5%;
   width: 60%;
   transform: rotate(25deg);
+}
+
+/* Features Section */
+#features {
+  padding: 7% 15% 7% 15%;
+}
+
+.feature-box {
+  text-align: center;
+  padding: 5%;
+}
+
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
 }
